--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </script>
 </head>
 <body>
-    <h1>Gruppenauswahl und Ortsfrage</h1>
+    <h1>Trafohaus Knüppelsdorferweg</h1>
     <p>Bitte wähle deine Gruppe:</p>
     <select id="group">
         <option value="">-- Gruppe auswählen --</option>
