--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             var answer = document.getElementById("answer").value.toLowerCase();
             var group = document.getElementById("group").value;
 
-            if (answer === "arpke") {
+            if (answer === "celsius") {
                 if (group === "Steinwedel" || group === "Sievershausen" || group === "Kolshorn") {
                     alert("Guckt nochmal in euren Zelt, der Schatz liegt doch schon da!");
                     return;
@@ -44,7 +44,7 @@
         <option value="Kolshorn">Kolshorn</option>
     </select>
 
-    <p>In welchen Ort befinden wir uns?</p>
+    <p>Nenne die Maßeinheit für die Temperatur!</p>
     <input type="text" id="answer" placeholder="Ort eingeben...">
     <button onclick="checkAnswer()">Antwort überprüfen</button>
 </body>
